basic animations and alignment fix

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -21,7 +21,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: white;
-  font-size: 8rem;
-  font-weight: 900;
+  .text-container {
+    label {
+      font-size: 8rem;
+      font-weight: 900;
+      color: white;
+    }
+  }
 }
